--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,54 @@ a {
     cursor: pointer;
     text-decoration: none;
 }
+
+/* Shared */
+
+.wallpaper {
+    display: block;
+    height: 100%;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
+/* Specific */
+
+.wallpaper {
+    background-image: url("../images/mexico.jpg");
+    background-position: center;
+    background-size: cover;
+    opacity: 0.2;
+    position: fixed;
+}
+
+.content {
+    display: flex;
+    position: relative;
+    min-height: 100vh;
+}
+
+.side {
+    max-height: 20rem;
+    max-width: 20rem;
+}
+
+.about {
+    max-width: 26rem;
+}   
+
+/* Responsive */
+
+@media screen and (max-width: 799px) {
+    .content {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 5rem 3rem;
+    }
+
+    .side {
+        margin-bottom: 3rem;
+        width: 100;
+    }
+}
