--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ a {
     text-decoration: none;
 }
 
+p {
+  line-height: 32px;
+  margin-bottom: 30px;
+}
+
 .name {
     font-size: 2.25rem;
     line-height: 1.125;
