--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,30 @@
 /* Base */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  display: flex;
+  justify-content:space-between; 
+  align-items: center;
+  padding: 1rem 2rem;
+  background: #5f45bb; 
+}
+
+nav ul {
+  display: flex;
+  list-style: none; 
+}
+
+nav li {
+  padding-left: 1rem; 
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff
+}
 
 html {
     background-color: #5f45bb;
